# LightScientist

./: .gitignore  Dockerfile  README.md  agent-run.md  cancel-lifecycle-plan.md  first-layer-research-controller.md  pyproject.toml  research-controller-design.md  second-layer-agent-draft.md  second-layer-runtime-supervisor.md  server-reproduction-debug-manual.md  system-architecture.md  third-layer-execution-runtime.md  third-layer-minimal-agent-plan.md  third-layer-waiting-background-plan.md
docs/: first-layer-research-controller.md  lightscientist-usage.md  lightscientist-webui-design.md  second-layer-runtime-supervisor.md  system-architecture.md  third-layer-execution-runtime.md  webui-quickstart.md
examples/moew/: README.md  prepare_workspace.sh  run_paper_report.sh  task_prompt.md
skills/experiment-analyze/: SKILL.md
skills/experiment-loop/: SKILL.md
skills/experiment-pipeline/: SKILL.md
skills/experiment-reproduce/: SKILL.md
skills/experiment-setup/: SKILL.md
skills/fuzz-analyze/: SKILL.md
skills/fuzz-loop/: SKILL.md
skills/fuzz-pipeline/: SKILL.md
skills/fuzz-setup/: SKILL.md
skills/idea-evaluate/: SKILL.md
skills/idea-generate/: SKILL.md
skills/idea-pipeline/: SKILL.md
skills/idea-probe/: SKILL.md
skills/idea-probe-collect/: SKILL.md
skills/idea-survey/: SKILL.md
skills/paper-figure/: SKILL.md
skills/paper-pipeline/: SKILL.md
skills/paper-plan/: SKILL.md
skills/paper-review/: SKILL.md
templates/: fuzz_experiment.sh.tmpl
tests/: test_smoke.py
tools/: __init__.py  arxiv_search.py  coverage.py  crash.py
(+27 files in other folders)
