[project]
name = "lightscientist"
version = "0.1.0"
description = "Three-layer control structure prototype for LightScientist."
requires-python = ">=3.11"
dependencies = ["deepagents>=0.5.3", "langchain-openai>=1.1.16"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
lightscientist = "esnext.cli:main"
esnext = "esnext.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
